<resources>
    <string name="app_name">FindYourJam</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_title">Title</string>
    <string name="prompt_time">Time and Date</string>
    <string name="prompt_place">Place</string>
    <string name="prompt_description">Description</string>
    <string name="action_create">Create Event</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Errors -->
    <string name="network_error">No network connection available</string>
    <!-- Login Screen -->
    <string name="email_name_field">Username:</string>
    <string name="password_field">Password:</string>
    <string name="login">Login</string>
    <string name="register"><u>Sign Up For LITT</u></string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="error_text">Invalid Username/Password Combination</string>

    <!-- Register account -->
    <string name="create_account"><u>Account Creation</u></string>
    <string name="username_field">Username: </string>
    <string name="email_field">Email: </string>
    <string name="submit_password_field">Password: </string>
    <string name="confirm_password">Confirm Password: </string>
    <string name="register_button">Register</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_password_confirm">Passwords do not match</string>
    <string name="register_error">Register failed</string>

    <!-- Database -->
    <string name="session_id">session_identifier</string>

    <array name="drawer">
        <item>Account</item>
        <item>Analytics</item>
        <item>Quit</item>
    </array>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="loading">Loading...</string>
    <string name="transfer">Transfer Amount</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="google_android_map_api_key">AIzaSyDUSs-VdV5IEG1YdQFfPU0lGQH7_XD1DQc</string>

</resources>

